# celesta-backend

./: .env.example  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/: cache.py  config.py  db.py  dependencies.py  main.py
app/api/routes/: auth.py  diary.py  notifications.py  plants.py  watering.py
app/models/: auth.py  diary.py  notification.py  plant.py  watering.py
