[project]
name = "celesta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
]
