[project]
name = "celesta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cache>=0.1.0",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "scalar-fastapi>=1.0.3",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
]
