[project]
name = "celesta-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi-cache2[redis]>=0.1.8",
    "fastapi[standard]>=0.115.12",
    "pydantic>=2.11.1",
    "pydantic-settings>=2.8.1",
    "redis>=5.2.1",
    "scalar-fastapi>=1.0.3",
    "setuptools>=78.1.0",
    "supabase>=2.15.0",
    "uvicorn>=0.34.0",
]
